--- a/src/kadmium-sacn-core/kadmium-sacn-core.csproj
+++ b/src/kadmium-sacn-core/kadmium-sacn-core.csproj
@@ -9,7 +9,7 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <Version>1.0.0</Version>
-    <Authors>Jesse Higginson;Hakan Lindestaf</Authors>
+    <Authors>Jesse Higginson;Hakan Lindestaf;Hamish Barjonas</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Title>Kadmium-sACN-Core</Title>
     <PackageProjectUrl>https://github.com/iKadmium/kadmium-sacn-core</PackageProjectUrl>
